FIND_PACKAGE(physfs REQUIRED)
FIND_PACKAGE(pntr REQUIRED)
FIND_PACKAGE(pntr_app REQUIRED)
FIND_PACKAGE(pntr_app_sfx REQUIRED)
FIND_PACKAGE(pntr_brush REQUIRED)

ADD_EXECUTABLE(${PROJECT_NAME} src/main.c)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} physfs-static pntr pntr_app)

IF (EMSCRIPTEN)
    SET(CMAKE_EXECUTABLE_SUFFIX ".mjs")
    TARGET_LINK_OPTIONS(${PROJECT_NAME} PRIVATE -sFORCE_FILESYSTEM -sEXPORTED_RUNTIME_METHODS=FS -sASYNCIFY=1)
    TARGET_COMPILE_DEFINITIONS(${PROJECT_NAME} PRIVATE PNTR_APP_WEB)
ELSE()
    FIND_PACKAGE(raylib REQUIRED)
    FIND_PACKAGE(wamr REQUIRED)
    TARGET_LINK_LIBRARIES(${PROJECT_NAME} raylib vmlib)
    TARGET_COMPILE_DEFINITIONS(${PROJECT_NAME} PRIVATE PNTR_APP_RAYLIB)

    # FIND_PACKAGE(retro REQUIRED)
    # TODO: retro target
    # TARGET_COMPILE_DEFINITIONS(${PROJECT_NAME}_libretro PRIVATE PNTR_APP_LIBRETRO)
ENDIF()
